--- a/index.html
+++ b/index.html
@@ -53,21 +53,10 @@
         <article class="block">
           <h1 class="block-header">About Me</h1>
           <hr />
-          <img src="assets/imgs/natebeach.jpeg" alt="" id="about-image" />
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum.</p>
+          <img src="assets/images/zoe.jpg" alt="" id="about-image" />
+          <p> My name is Amber, I am 26 years old and currently live in Cleveland, Ohio. I have 10 animals whom I love dearly. Pictured is Zoe the first dog I got after moving out.</p>
           <br />
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo
-            consequat.
+          <p>In my free time I enjoy reading or playing video games.
           </p>
         </article>
       </div>
